# ffmpeg-player

./: .gitignore  README.md
assets/: titanic.mkv
decoder/: CMakeLists.txt  main.c  start_build.sh
decoder-pure/: CMakeLists.txt  main.c  start_build.sh
simple/: CMakeLists.txt  main.c  start_build.sh
simple-update/: CMakeLists.txt  main.c  start_build.sh
yuv/: CMakeLists.txt  main.c  start_build.sh
